test/deca/syntax/invalid/miss_parenthesis.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (manque parenthèse fermante)

{
    (;
}